applications/atlantis/overlays/common/resources/patch.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: atlantis
spec:
  template:
    spec:
      serviceAccountName: atlantis
      containers:
        - name: atlantis
          image: runderwood/atlantis-terragrunt:latest
