applications/atlantis/overlays/common/resources/ingress-external.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "ingress-atlantis-external"
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/whitelist-source-range: |
      "140.82.112.0/20, 192.30.252.0/22, 185.199.108.0/22, 143.55.64.0/20, 104.192.137.240/28, 
      185.166.142.240/28, 185.166.143.240/28, 104.192.143.240/28, 104.192.142.240/28, 104.192.140.240/28, 
      104.192.138.240/28,13.230.158.120/32, 18.179.245.253/32, 52.69.239.207/32, 13.209.163.61/32, 
      54.180.75.25/32, 13.233.76.15/32, 13.234.168.60/32, 54.169.195.247/32, 13.250.94.254/32, 
      54.207.47.76/32, 13.250.168.23/32, 18.229.199.252/32, 18.184.99.224/28, 52.215.192.224/28, 
      18.246.31.224/28, 18.234.32.224/28, 13.236.14.80/32, 18.136.214.96/28, 13.52.5.96/28, 13.236.8.224/28, 
      13.238.54.232/32, 52.63.231.178/32, 20.201.28.148/32, 20.205.243.168/32, 102.133.202.248/32"
spec:
  ingressClassName: nginx-external
  rules:
    - host: atlantis.domain.com
      http:
        paths:
          - path: "/.*"
            pathType: Prefix
            backend:
              service:
                name: atlantis
                port:
                  number: 80
