applications/atlantis/overlays/common/resources/ingress-internal.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "ingress-atlantis-internal"
spec:
  ingressClassName: nginx-internal
  rules:
    - host: "atlantis.domain.local"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: atlantis
                port:
                  number: 80
